<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ThisHopefullyWillWork</string>
    <string name="firstNumberLabel">First Number</string>
    <string name="secondNumberLabel">Second Number</string>
    <string name="action_settings">Settings</string>
    <string name="addNumberButton">Add Numbers</string>
    <string name="result"> </string>
    <string name="resultLabel">Result:</string>

</resources>
