<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/screenLayout">

    <TextView android:id="@+id/numberOneLabel"
        android:text="@string/firstNumberLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="29dp" />

    <EditText android:id="@+id/firstNumberEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"

        android:layout_alignBottom="@+id/numberOneLabel"
        android:layout_toEndOf="@+id/numberOneLabel"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/addNumbers"
        android:layout_alignStart="@+id/addNumbers" />

    <TextView android:id="@+id/numberTwoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secondNumberLabel"
        android:layout_below="@+id/firstNumberEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="41dp" />

    <EditText android:id="@+id/secondNumberEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_alignBottom="@+id/numberTwoLabel"
        android:layout_alignRight="@+id/firstNumberEditText"
        android:layout_alignEnd="@+id/firstNumberEditText"
        android:layout_alignLeft="@+id/addNumbers"
        android:layout_alignStart="@+id/addNumbers" />

    <Button android:id="@+id/addNumbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addNumberButton"
        android:layout_marginTop="26dp"
        android:onClick="addNumbers"
        android:layout_below="@+id/secondNumberEditText"
        android:layout_toRightOf="@+id/numberTwoLabel"
        android:layout_toEndOf="@+id/numberTwoLabel" />

    <TextView android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:layout_below="@+id/resultLabelTextView"
        android:layout_alignRight="@+id/secondNumberEditText"
        android:layout_alignEnd="@+id/secondNumberEditText" />

    <TextView android:id="@+id/resultLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultLabel"
        android:layout_below="@+id/addNumbers"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
